--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
-    "react-i18next": "^13.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -42,8 +41,6 @@
     ]
   },
   "devDependencies": {
-    "daisyui": "^4.0.7",
-    "eslint": "^8.53.0",
-    "tailwindcss": "^3.3.5"
+    "eslint": "^8.53.0"
   }
 }
